--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-/* html {
+html {
   width: 100%;
   height: 100%;
 }
@@ -7,4 +7,65 @@ body {
   width: 100%;
   height: 100%;
   background-color: black;
-} */
+  display: flex;
+  justify-content: center;
+}
+
+.main-content {
+  max-width: 960px;
+  display: flex;
+  flex-direction: column;
+}
+
+.travel-list {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.travel-card {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+}
+
+/* 노트북 & 테블릿 가로 (해상도 1024px ~ 1279px)*/
+@media all and (min-width: 1024px) {
+  .main-content {
+    width: 960px;
+    padding: 1rem;
+  }
+
+  .travel-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* 테블릿 가로 (해상도 768px ~ 1023px)*/
+@media all and (min-width: 768px) and (max-width: 1023px) {
+  .main-content {
+    padding: 0.5rem;
+  }
+  .travel-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* 모바일 가로 & 테블릿 세로 (해상도 480px ~ 767px)*/
+@media all and (min-width: 480px) and (max-width: 767px) {
+  .main-content {
+    padding: 0.5rem;
+  }
+  .travel-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* 모바일 세로 (해상도 ~ 479px)*/
+@media all and (max-width: 479px) {
+  .main-content {
+    padding: 0.5rem;
+  }
+  .travel-list {
+    grid-template-columns: 1fr; /* 한 줄에 1개의 열 */
+  }
+}
