feat: align items in home

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,11 @@ body {
   justify-content: center;
 }
 
+.home {
+  display: flex;
+  justify-content: center;
+}
+
 .main-content {
   max-width: 960px;
   display: flex;
